Added open in new button, and teams module

--- a/src/components/eyebrows/eyebrow.html
+++ b/src/components/eyebrows/eyebrow.html
@@ -1,6 +1,5 @@
 <!--
-	Component: Button
-	Variant: Sapphire
+	Component: Eyebrow
 -->
 @@include('components/eyebrows/template.html', {
 	variant: "",
