--- a/src/components/eyebrows/template.html
+++ b/src/components/eyebrows/template.html
@@ -1,6 +1,1 @@
-<table class="eyebrow @@variant">
-	<tr>
-		<td class="circle"></td>
-		<td>@@label</td>
-	</tr>
-</table>
+<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">@@label</span></p>
