--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -283,6 +283,22 @@
 				</td>
 			</tr>
 <!-- ---------- END Thumbnail Table Modules ---------- -->
+
+<!-- ---------- Two Column Content, Full Content Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/two-column-contents/full-content/full-content.html" )
+				</td>
+			</tr>
+<!-- ---------- END Two Column Content, Full Content Modules ---------- -->
+
+<!-- ---------- Two Column Content, Teams Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/two-column-contents/teams/team.html" )
+				</td>
+			</tr>
+<!-- ---------- END Two Column Content, Teams Modules ---------- -->
 		</table>
 	</body>
 </html>
