All two column modules added, sans variants, that'll come later

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -299,6 +299,46 @@
 				</td>
 			</tr>
 <!-- ---------- END Two Column Content, Teams Modules ---------- -->
+
+<!-- ---------- Two Column Content, Strategy Card Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/two-column-contents/strategy-card/strategy-card.html" )
+				</td>
+			</tr>
+<!-- ---------- END Two Column Content, Strategy Card Modules ---------- -->
+
+<!-- ---------- Two Column Content, Speaker Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/two-column-contents/speaker/speaker.html" )
+				</td>
+			</tr>
+<!-- ---------- END Two Column Content, Speaker Modules ---------- -->
+
+<!-- ---------- Two Column Content, Image Right Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/two-column-contents/image-right/image-right.html" )
+				</td>
+			</tr>
+<!-- ---------- END Two Column Content, Image Right Modules ---------- -->
+
+<!-- ---------- Two Column Content, Image Left Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/two-column-contents/image-left/image-left.html" )
+				</td>
+			</tr>
+<!-- ---------- END Two Column Content, Image Left Modules ---------- -->
+
+<!-- ---------- Two Column Content, Title Left Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/two-column-contents/title-left/title-left.html" )
+				</td>
+			</tr>
+<!-- ---------- END Two Column Content, Title Left Modules ---------- -->
 		</table>
 	</body>
 </html>
