--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -53,7 +53,7 @@ table tr td {
 
 ul {
 	margin: 0;
-	padding: 16px;
+	padding: 0 16px;
 	line-height: 160%;
 	font-weight: 400;
 	font-size: 12px;
@@ -172,6 +172,8 @@ a {
 .link-2 {
 	font-size: 12px;
 	line-height: 160%;
+	color: var(--sapphire);
+	text-decoration: underline;
 }
 
 .disclaimer {
@@ -452,6 +454,22 @@ a {
 		display: inline-block;
 		width: 100%;
 		max-width: 267px;
+	}
+
+	.layout_mobile-one-column
+	{
+		display: block;
+	}
+
+	.layout_mobile-one-column .column {
+		display: inline-block;
+		width: 100%;
+	}
+}
+
+@media screen and (min-width: 641px) {
+	.align-right-md {
+		text-align: right;
 	}
 }
 /* ---------- END Mobile Styles ---------- */
