--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -339,6 +339,20 @@
 				</td>
 			</tr>
 <!-- ---------- END Two Column Content, Title Left Modules ---------- -->
+
+<!-- ---------- Footer Disclaimer Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/footer-disclaimer/one-column/one-column-footer-disclaimer.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/footer-disclaimer/two-column/two-column-footer-disclaimer.html" )
+				</td>
+			</tr>
+<!-- ---------- END Footer Disclaimer Modules ---------- -->
 		</table>
 	</body>
 </html>
