--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,18 +51,24 @@ table tr td {
 	vertical-align: top;
 }
 
-ul {
+/* ul {
 	margin: 0;
-	padding: 0 16px;
+	padding: 0;
 	line-height: 160%;
 	font-weight: 400;
 	font-size: 12px;
+
+	mso-margin-alt: 0px;
+	mso-padding-alt: 0px;
 }
 
 li {
 	padding-bottom: 8px;
-	padding-left: 0;
-	margin: 0;
+	padding-left: 0px;
+	margin-left: 0px; 
+
+  mso-margin-left-alt: 0px;
+	mso-padding-alt: 0px;
 }
 
 li a {
@@ -72,10 +78,25 @@ li a {
 li::marker {
 	color: var(--sapphire);
 	font-size: 16px;
+} */
+
+.list-item {
+	vertical-align: middle;
+	line-height: 24px;
+}
+
+.list-item .bullet {
+	font-size: 22px;
+	color: var(--sapphire);
+	vertical-align: middle;
 }
 
 /* Dark BG override */
 .dark li::marker {
+	color: var(--parchment);
+}
+
+.dark .list-item .bullet {
 	color: var(--parchment);
 }
 
