Added thumbnail grid module

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -340,6 +340,14 @@
 			</tr>
 <!-- ---------- END Two Column Content, Title Left Modules ---------- -->
 
+<!-- ---------- Thumbnail Grid Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/thumbnail-grid/thumbnail-grid.html" )
+				</td>
+			</tr>
+<!-- ---------- END Thumbnail Grid Modules ---------- -->
+
 <!-- ---------- Footer Disclaimer Modules ---------- -->
 			<tr>
 				<td align="center">
