--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -340,6 +340,44 @@
 			</tr>
 <!-- ---------- END Two Column Content, Title Left Modules ---------- -->
 
+<!-- ---------- Four Column Content Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/four-column-contents/four-column-content.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/four-column-contents/four-column-content.sapphire.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/four-column-contents/four-column-content.sage.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/four-column-contents/four-column-content.onyx.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/four-column-contents/four-column-content.clarity.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/four-column-contents/four-column-content.currency.html" )
+				</td>
+			</tr>
+<!-- ---------- END Four Column Content Modules ---------- -->
+
 <!-- ---------- Thumbnail Grid Modules ---------- -->
 			<tr>
 				<td align="center">
@@ -427,29 +465,29 @@
 <!-- ---------- END CTA Banner, One Column Modules ---------- -->
 
 <!-- ---------- CTA Banner, One Column, Small Heading Modules ---------- -->
-<tr>
-	<td align="center">
-		@@include( "modules/cta-banner/one-column-small/cta-banner.clarity.html" )
-	</td>
-</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/cta-banner/one-column-small/cta-banner.clarity.html" )
+				</td>
+			</tr>
 
-<tr>
-	<td align="center">
-		@@include( "modules/cta-banner/one-column-small/cta-banner.sapphire.html" )
-	</td>
-</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/cta-banner/one-column-small/cta-banner.sapphire.html" )
+				</td>
+			</tr>
 
-<tr>
-	<td align="center">
-		@@include( "modules/cta-banner/one-column-small/cta-banner.sage.html" )
-	</td>
-</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/cta-banner/one-column-small/cta-banner.sage.html" )
+				</td>
+			</tr>
 
-<tr>
-	<td align="center">
-		@@include( "modules/cta-banner/one-column-small/cta-banner.currency.html" )
-	</td>
-</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/cta-banner/one-column-small/cta-banner.currency.html" )
+				</td>
+			</tr>
 <!-- ---------- END CTA Banner, One Column, Small Heading Modules ---------- -->
 
 <!-- ---------- Footer Disclaimer Modules ---------- -->
