--- a/src/components/buttons/open-in-new/template.html
+++ b/src/components/buttons/open-in-new/template.html
@@ -8,7 +8,7 @@
 					<w:anchorlock/>
 					<center>
 			<![endif]-->
-			<img src="../../images/open_in_new_w.png" alt="open in new window button icon" class="btn-icon">
+			<img src="@@imgBase/open_in_new_w.png" alt="open in new window button icon" class="btn-icon">
 			<!--[if mso]>
 					</center>
 				</v:roundrect>
