added three column content module

--- a/src/components/buttons/open-in-new/template.html
+++ b/src/components/buttons/open-in-new/template.html
@@ -8,7 +8,9 @@
 					<w:anchorlock/>
 					<center>
 			<![endif]-->
-			<img src="@@imgBase/open_in_new_w.png" alt="open in new window button icon" class="btn-icon">
+			<span class="d-block btn-icon">
+				<img src="@@imgBase/open_in_new_w.png" alt="open in new window button icon" class="" width="16px" height="16px">
+			</span>
 			<!--[if mso]>
 					</center>
 				</v:roundrect>
