--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -340,6 +340,30 @@
 			</tr>
 <!-- ---------- END Two Column Content, Title Left Modules ---------- -->
 
+<!-- ---------- Three Column Content, Content Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/three-column-contents/content/content.html" )
+				</td>
+			</tr>
+<!-- ---------- END Three Column Content, Content Modules ---------- -->
+
+<!-- ---------- Three Column Content, Thumbnail Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/three-column-contents/thumbnail/thumbnail.html" )
+				</td>
+			</tr>
+<!-- ---------- END Three Column Content, Thumbnail Modules ---------- -->
+
+<!-- ---------- Three Column Content, Speaker Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/three-column-contents/speaker/speaker.html" )
+				</td>
+			</tr>
+<!-- ---------- END Three Column Content, Speaker Modules ---------- -->
+
 <!-- ---------- Four Column Content Modules ---------- -->
 			<tr>
 				<td align="center">
