added last three column content

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -356,6 +356,14 @@
 			</tr>
 <!-- ---------- END Three Column Content, Thumbnail Modules ---------- -->
 
+<!-- ---------- Three Column Content, Three Thumbnail Modules ---------- -->
+<tr>
+	<td align="center">
+		@@include( "modules/three-column-contents/three-thumbnail/three-thumbnail.html" )
+	</td>
+</tr>
+<!-- ---------- END Three Column Content, Three Thumbnail Modules ---------- -->
+
 <!-- ---------- Three Column Content, Speaker Modules ---------- -->
 			<tr>
 				<td align="center">
