--- a/src/components/buttons/open-in-new/template.html
+++ b/src/components/buttons/open-in-new/template.html
@@ -1,20 +1,21 @@
 <table cellspacing="16px" role="presentation" class="btn open-in-new">
 	<tr  cellspacing="16px">
-		<td rowspan="2" style="vertical-align: middle; padding-right: 8px;" class="padding-r-8">
+		<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 			<!--[if mso]>
-				<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="100%" stroke="f" 
-					style="height:32px;v-text-anchor:middle;color:#ffffff;width:28px;height:28px;" 
-					fillcolor="#00539A">
-					<w:anchorlock/>
-					<center>
-			<![endif]-->
-			<span class="d-block btn-icon">
+      <v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
+        <v:fill type="solid" color="#00539A"/>
+        <v:textbox inset="3px,3px,0,0" style="text-align:center;">
+					<img src="@@imgBase/open_in_new_w.png" width="16" height="16" alt="Open in new Icon" style="display: block; padding: 6px;" />
+        </v:textbox>
+      </v:oval>
+      <![endif]-->
+      
+      <!-- Fallback for non-Outlook clients -->
+      <!--[if !mso]><!-->
+      <div class="d-block btn-icon">
 				<img src="@@imgBase/open_in_new_w.png" alt="open in new window button icon" class="" width="16px" height="16px">
-			</span>
-			<!--[if mso]>
-					</center>
-				</v:roundrect>
-			<![endif]-->
+			</div>
+      <!--<![endif]-->
 		</td>
 		<td>
 			<a href="#" class="link-2">@@label</a>
