Color variants for thumbnails and full content two cols

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -290,6 +290,30 @@
 					@@include( "modules/two-column-contents/full-content/full-content.html" )
 				</td>
 			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/two-column-contents/full-content/full-content.sapphire.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/two-column-contents/full-content/full-content.sage.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/two-column-contents/full-content/full-content.clarity.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/two-column-contents/full-content/full-content.currency.html" )
+				</td>
+			</tr>
 <!-- ---------- END Two Column Content, Full Content Modules ---------- -->
 
 <!-- ---------- Two Column Content, Teams Modules ---------- -->
@@ -414,6 +438,30 @@
 			<tr>
 				<td align="center">
 					@@include( "modules/thumbnail-grid/thumbnail-grid.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/thumbnail-grid/thumbnail-grid.clarity.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/thumbnail-grid/thumbnail-grid.sage.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/thumbnail-grid/thumbnail-grid.sapphire.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/thumbnail-grid/thumbnail-grid.currency.html" )
 				</td>
 			</tr>
 <!-- ---------- END Thumbnail Grid Modules ---------- -->
