--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -381,6 +381,10 @@ a {
 	padding: 6px;
 }
 
+.dark .btn.open-in-new .btn-icon {
+	background-color: var(--parchment);
+}
+
 .eyebrow {
 	text-transform: uppercase;
 	font-size: 10px;
