--- a/src/modules/cta-banner/two-column/templates/template.html
+++ b/src/modules/cta-banner/two-column/templates/template.html
@@ -1,15 +1,19 @@
+<!--
+	Module: CTA Banner, Two Column
+	Variant: @@variant, sapphire buttons
+-->
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner @@variant">
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
-			<table style="" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%" >
+			<table style="" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 				<tr>
-					<td>
-						<h2>Explore a New Perspective on AI from Our Team (H2)</h2>
+					<td class="column">
+						@@heading
 						<br>
-						<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+						@@paragraph
 					</td>
-					<td>
+					<td class="column">
 						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
 							label: "Download",
 							width: "98px"
