started adding emerging market email template, shifting to refactoring master template

--- a/src/modules/cta-banner/one-column/templates/template.dark.html
+++ b/src/modules/cta-banner/one-column/templates/template.dark.html
@@ -2,9 +2,9 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
-			<h2>Explore a New Perspective on AI from Our Team (H2)</h2>
+			@@heading
 			<br>
-			<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+			@@paragraph
 			<br>
 			@@include("components/buttons/pills/templates/template.primary.onyx.html", {
 				label: "Download",
