--- a/src/modules/cta-banner/one-column/templates/template.html
+++ b/src/modules/cta-banner/one-column/templates/template.html
@@ -2,14 +2,14 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
-			<h3>Explore a New Perspective on AI from Our Team (h3)</h3>
+			@@heading
 			<br>
-			<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+			@@paragraph
 			<br>
 			@@include("components/buttons/pills/templates/template.primary.onyx.html", {
-				label: "Visit",
-				width: "65px"
-			})
+				label: "Download",
+				width: "98px"
+			})		
 		</td>
 		<td class="frame"></td>
 	</tr>
