--- a/src/modules/cta-banner/two-column/templates/template.html
+++ b/src/modules/cta-banner/two-column/templates/template.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
-			<table style="" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
+			<table style="" border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 				<tr>
 					<td class="column">
 						@@heading
