--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -440,7 +440,7 @@ a {
 }
 
 .content {
-	padding: 32px 16px;
+	padding: 32px 8px; /* horizontal padding is 16px, but table cellpadding makes up the other 8px */
 	border-right: 0.5px solid var(--frame);
 	border-left: 0.5px solid var(--frame);
 }
