--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -466,109 +466,8 @@
 			</tr>
 <!-- ---------- END Thumbnail Grid Modules ---------- -->
 
-<!-- ---------- CTA Banner, Two Column Modules ---------- -->
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/two-column/cta-banner.clarity.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/two-column/cta-banner.sapphire.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/two-column/cta-banner.sage.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/two-column/cta-banner.currency.html" )
-				</td>
-			</tr>
-<!-- ---------- END CTA Banner, Two Column Modules ---------- -->
-
-<!-- ---------- CTA Banner, Two Column, Small Headling Modules ---------- -->
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/two-column-small/cta-banner.clarity.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/two-column-small/cta-banner.sapphire.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/two-column-small/cta-banner.sage.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/two-column-small/cta-banner.currency.html" )
-				</td>
-			</tr>
-<!-- ---------- END CTA Banner, Two Column, Small Headling Modules ---------- -->
-
-<!-- ---------- CTA Banner, One Column Modules ---------- -->
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/one-column/cta-banner.clarity.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/one-column/cta-banner.sapphire.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/one-column/cta-banner.sage.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/one-column/cta-banner.currency.html" )
-				</td>
-			</tr>
-<!-- ---------- END CTA Banner, One Column Modules ---------- -->
-
-<!-- ---------- CTA Banner, One Column, Small Heading Modules ---------- -->
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/one-column-small/cta-banner.clarity.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/one-column-small/cta-banner.sapphire.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/one-column-small/cta-banner.sage.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/cta-banner/one-column-small/cta-banner.currency.html" )
-				</td>
-			</tr>
-<!-- ---------- END CTA Banner, One Column, Small Heading Modules ---------- -->
+			@@include( "modules/cta-banner/two-column/two-column-cta-banners.html" )
+			@@include( "modules/cta-banner/one-column/one-column-cta-banners.html" )
 
 <!-- ---------- Footer Disclaimer Modules ---------- -->
 			<tr>
