--- a/src/modules/cta-banner/two-column/templates/template.html
+++ b/src/modules/cta-banner/two-column/templates/template.html
@@ -5,7 +5,7 @@
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner @@variant">
 	<tr>
 		<td class="frame"></td>
-		<td class="content">
+		<td class="content h-flush">
 			<table style="" border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 				<tr>
 					<td class="column">
