refactored some modules

--- a/src/modules/tables/thumbnail/templates/template.html
+++ b/src/modules/tables/thumbnail/templates/template.html
@@ -1,8 +1,8 @@
 <!--
-	Module: Table
-	Variant: Thumbnail, Parchment
+	Module: Thumbnail Table
+	Variant: @@variant
 -->
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module ">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
 	<tr class="bordered">
 		<td class="frame"></td>
 		<td class="content">
@@ -12,77 +12,101 @@
 			<br>
 			<p class="paragraph-3">Top 3 highlights from May 2024.</p>
 			<br>
-			<table style width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
+			<table style="" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
-						<a href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
+						@@include("components/buttons/text/template.html", {
+							variant: "",
+							href: "https://lazard.com",
+							label: "Download"
+						})
 					</td>
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
-						<a href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
+						@@include("components/buttons/text/template.html", {
+							variant: "",
+							href: "https://lazard.com",
+							label: "Download"
+						})
 					</td>
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
-						<a href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
+						@@include("components/buttons/text/template.html", {
+							variant: "",
+							href: "https://lazard.com",
+							label: "Download"
+						})
 					</td>
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
-						<a href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
+						@@include("components/buttons/text/template.html", {
+							variant: "",
+							href: "https://lazard.com",
+							label: "Download"
+						})
 					</td>
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
-						<a href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
+						@@include("components/buttons/text/template.html", {
+							variant: "",
+							href: "https://lazard.com",
+							label: "Download"
+						})
 					</td>
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
-						<a href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
+						@@include("components/buttons/text/template.html", {
+							variant: "",
+							href: "https://lazard.com",
+							label: "Download"
+						})
 					</td>
 				</tr>
 			</table>
