--- a/src/modules/email-headings/templates/template.dark.onyx.html
+++ b/src/modules/email-headings/templates/template.dark.onyx.html
@@ -1,3 +1,7 @@
+<!--
+	Module: Email Heading
+	Variant: @@variant, onyx buttons, dark background
+-->
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark @@variant">
 	<tr>
 		<td class="frame"></td>
