--- a/src/modules/email-headings/templates/template.html
+++ b/src/modules/email-headings/templates/template.html
@@ -1,3 +1,7 @@
+<!--
+	Module: Email Heading
+	Variant: @@variant, sapphire buttons
+-->
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
 	<tr>
 		<td class="frame"></td>
