--- a/src/modules/one-column-contents/templates/template.dark.html
+++ b/src/modules/one-column-contents/templates/template.dark.html
@@ -1,8 +1,8 @@
 <!--
-	Module: One-column-content
-	Variant: Clarity
+	Module: One Column Contents
+	Variant: @@variant, sapphire buttons, dark background
 -->
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module clarity">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark @@variant">
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
@@ -15,18 +15,18 @@
 			<br>
 			<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 			<br>
-			<img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_CircleGraph.png" alt="1Y Grades Chart" class="mw-100">
+			<img style src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" class="mw-100" />
 			<p></p> <!-- Spacer <p> for MSO image margin -->
 			<br>
 			<p class="disclaimer">
-				As of 26 October 2023<br>
-				Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br>
+				As of 26 October 2023<br/>
+				Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br/>
 				Source: Lazard, JP Morgan
 			</p>
 			<br>
 			<p class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
 			<br>
-
+			
 			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Emerging Markets</a></p>
 			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Europe</a></p>
 			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Japan</a></p>
@@ -37,44 +37,20 @@
 				Component: Button
 				Variant: Pill, Primary, Large
 			-->
-			<!--
-				Component: Pill Button
-				Variant: Primary, Sapphire
-			-->
-			<!--[if mso]>
-				<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-					style="height:32px;v-text-anchor:middle;color:#ffffff;width:128px;" 
-					fillcolor="#00539A">
-					<w:anchorlock/>
-					<center>
-			<![endif]-->
-			<a target="_blank" href="https://lazard.com/" style="width: 128px" class="btn pill">Primary Button</a>
-			<!--[if mso]>
-					</center>
-				</v:roundrect>
-			<![endif]-->
+			@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
+				label: "Primary Button",
+				width: "128px"
+			})
 			&nbsp;&nbsp;
 
 			<!--
 				Component: Button
 				Variant: Pill, Secondary, Large
 			-->
-			<!--
-				Component: Pill Button
-				Variant: Secondary, Sapphire
-			-->
-			<!--[if mso]>
-				<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" fill="f"
-					style="height:32px;v-text-anchor:middle;color:#00539A;width:194px;"
-					strokecolor="#00539A">
-					<w:anchorlock/>
-					<center>
-			<![endif]-->
-			<a target="_blank" href="https://lazard.com/" style="width: 194px" class="btn pill secondary">Sapphire Secondary Button</a>
-			<!--[if mso]>
-					</center>
-				</v:roundrect>
-			<![endif]-->
+			@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
+				label: "Sapphire Secondary Button",
+				width: "194px"
+			})
 		</td>
 		<td class="frame"></td>
 	</tr>
