--- a/src/modules/one-column-contents/templates/template.html
+++ b/src/modules/one-column-contents/templates/template.html
@@ -1,8 +1,8 @@
 <!--
-	Module: One-column-content
-	Variant: Sage
+	Module: One Column Contents
+	Variant: @@variant, sapphire buttons
 -->
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module sage">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
@@ -15,12 +15,12 @@
 			<br>
 			<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 			<br>
-			<img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Terrace.png" alt="1Y Grades Chart" class="mw-100">
+			<img style src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" class="mw-100" />
 			<p></p> <!-- Spacer <p> for MSO image margin -->
 			<br>
 			<p class="disclaimer">
-				As of 26 October 2023<br>
-				Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br>
+				As of 26 October 2023<br/>
+				Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br/>
 				Source: Lazard, JP Morgan
 			</p>
 			<br>
@@ -37,44 +37,20 @@
 				Component: Button
 				Variant: Pill, Primary, Large
 			-->
-			<!--
-				Component: Pill Button
-				Variant: Primary, Onyx
-			-->
-			<!--[if mso]>
-				<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-					style="height:32px;v-text-anchor:middle;color:#ffffff;width:128px;" 
-					fillcolor="#171A1C">
-					<w:anchorlock/>
-					<center>
-			<![endif]-->
-			<a target="_blank" href="https://lazard.com/" style="width: 128px" class="btn pill onyx">Primary Button</a>
-			<!--[if mso]>
-					</center>
-				</v:roundrect>
-			<![endif]-->
+			@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+				label: "Primary Button",
+				width: "128px"
+			})
 			&nbsp;&nbsp;
 
 			<!--
 				Component: Button
 				Variant: Pill, Secondary, Large
 			-->
-			<!--
-				Component: Pill Button
-				Variant: Secondary, Onyx
-			-->
-			<!--[if mso]>
-				<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" fill="f" 
-					style="height:32px;v-text-anchor:middle;color:#171A1C;width:194px;" \
-					strokecolor="#171A1C">
-					<w:anchorlock/>
-					<center>
-			<![endif]-->
-			<a target="_blank" href="https://lazard.com/" style="width: 194px" class="btn pill onyx secondary">Onyx Secondary Button</a>
-			<!--[if mso]>
-					</center>
-				</v:roundrect>
-			<![endif]-->
+			@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
+				label: "Sapphire Secondary Button",
+				width: "194px"
+			})
 		</td>
 		<td class="frame"></td>
 	</tr>
