--- a/src/modules/one-column-contents/templates/template.onyx.html
+++ b/src/modules/one-column-contents/templates/template.onyx.html
@@ -1,3 +1,7 @@
+<!--
+	Module: One Column Contents
+	Variant: @@variant, onyx buttons
+-->
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
 	<tr>
 		<td class="frame"></td>
