--- a/src/modules/tables/numbered/templates/template.html
+++ b/src/modules/tables/numbered/templates/template.html
@@ -1,9 +1,9 @@
 <!--
-	Module: Table
-	Variant: Parchment
+	Module: Numbered Table
+	Variant: @@variant
 -->
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module ">
-	<tr>
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
+	<tr class="bordered">
 		<td class="frame"></td>
 		<td class="content">
 			<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
@@ -12,56 +12,60 @@
 			<br>
 			<p class="paragraph-3">Top 3 highlights from May 2024.</p>
 			<br>
-			<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
+			<table style="" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
 				<tr class="bordered">
-					<td>
+					<td class="table-number">
+						<h3>01.</h3>
+					</td>
+					<td class="table-content">
 						<p>World equity markets rose 4%, recovering from April's decline.</p>
 					</td>
+					<td></td>
 				</tr>
 				<tr class="bordered">
-					<td>
+					<td class="table-number">
+						<h3>02.</h3>
+					</td>
+					<td class="table-content">
 						<p>Yield curves remained inverted in developed markets, with the exception of Japan and Australia.</p>
 					</td>
+					<td></td>
 				</tr>
 				<tr class="bordered">
-					<td>
+					<td class="table-number">
+						<h3>03.</h3>
+					</td>
+					<td class="table-content">
 						<p>World equity markets rose 4%, recovering from April's decline.</p>
 					</td>
+					<td></td>
 				</tr>
 				<tr class="bordered">
-					<td>
+					<td class="table-number">
+						<h3>04.</h3>
+					</td>
+					<td class="table-content">
 						<p>World equity markets rose 4%, recovering from April's decline.</p>
 					</td>
+					<td></td>
 				</tr>
 				<tr class="bordered">
-					<td>
+					<td class="table-number">
+						<h3>05.</h3>
+					</td>
+					<td class="table-content">
 						<p>Yield curves remained inverted in developed markets, with the exception of Japan and Australia.</p>
 					</td>
+					<td></td>
 				</tr>
 				<tr class="bordered">
-					<td>
+					<td class="table-number">
+						<h3>06.</h3>
+					</td>
+					<td class="table-content">
 						<p>World equity markets rose 4%, recovering from April's decline.</p>
 					</td>
-				</tr>
-				<tr class="bordered">
-					<td>
-						<p>World equity markets rose 4%, recovering from April's decline.</p>
-					</td>
-				</tr>
-				<tr class="bordered">
-					<td>
-						<p>World equity markets rose 4%, recovering from April's decline.</p>
-					</td>
-				</tr>
-				<tr class="bordered">
-					<td>
-						<p>World equity markets rose 4%, recovering from April's decline.</p>
-					</td>
-				</tr>
-				<tr class="bordered">
-					<td>
-						<p>World equity markets rose 4%, recovering from April's decline.</p>
-					</td>
+					<td></td>
 				</tr>
 			</table>
 			<br>
