Variants and refactoring, done, now for the final compositions and bug fixing

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -47,91 +47,28 @@
 
 			@@include( "modules/thumbnail-grid/thumbnail-grids.html" )
 
-<!-- ---------- Three Column Content, Content Modules ---------- -->
-			<tr>
-				<td align="center">
-					@@include( "modules/three-column-contents/content/content.html" )
-				</td>
-			</tr>
-<!-- ---------- END Three Column Content, Content Modules ---------- -->
+			@@include( "modules/three-column-contents/content/contents.html" )
 
-<!-- ---------- Three Column Content, Thumbnail Modules ---------- -->
-			<tr>
-				<td align="center">
-					@@include( "modules/three-column-contents/thumbnail/thumbnail.html" )
-				</td>
-			</tr>
-<!-- ---------- END Three Column Content, Thumbnail Modules ---------- -->
+			@@include( "modules/three-column-contents/large-thumbnail/large-thumbnails.html" )
 
-<!-- ---------- Three Column Content, Three Thumbnail Modules ---------- -->
-<tr>
-	<td align="center">
-		@@include( "modules/three-column-contents/three-thumbnail/three-thumbnail.html" )
-	</td>
-</tr>
-<!-- ---------- END Three Column Content, Three Thumbnail Modules ---------- -->
+			@@include( "modules/three-column-contents/three-thumbnail/three-thumbnails.html" )
 
-<!-- ---------- Three Column Content, Speaker Modules ---------- -->
-			<tr>
-				<td align="center">
-					@@include( "modules/three-column-contents/speaker/speaker.html" )
-				</td>
-			</tr>
-<!-- ---------- END Three Column Content, Speaker Modules ---------- -->
+			@@include( "modules/three-column-contents/speaker/speakers.html" )
 
-<!-- ---------- Four Column Content Modules ---------- -->
-			<tr>
-				<td align="center">
-					@@include( "modules/four-column-contents/four-column-content.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/four-column-contents/four-column-content.sapphire.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/four-column-contents/four-column-content.sage.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/four-column-contents/four-column-content.onyx.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/four-column-contents/four-column-content.clarity.html" )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/four-column-contents/four-column-content.currency.html" )
-				</td>
-			</tr>
-<!-- ---------- END Four Column Content Modules ---------- -->
-
+			@@include( "modules/four-column-contents/four-column-contents.html" )
 			
+			@@include( "modules/cta-banner/two-column/two-column-cta-banners.html" )
 
-<!-- ---------- Footer Disclaimer Modules ---------- -->
-			<tr>
-				<td align="center">
-					@@include( "modules/footer-disclaimer/one-column/one-column-footer-disclaimer.html" )
-				</td>
-			</tr>
+			@@include( "modules/cta-banner/one-column/one-column-cta-banners.html" )
 
 			<tr>
 				<td align="center">
-					@@include( "modules/footer-disclaimer/two-column/two-column-footer-disclaimer.html" )
+					<h4 style="margin: 16px;">Footer + Disclaimer</h4>
 				</td>
 			</tr>
-<!-- ---------- END Footer Disclaimer Modules ---------- -->
+
+			@@include( "modules/footer-disclaimer/one-column/one-column-footer-disclaimer.html" )
+			@@include( "modules/footer-disclaimer/two-column/two-column-footer-disclaimer.html" )
 		</table>
 	</body>
 </html>
