--- a/src/modules/email-headings/templates/template.dark.onyx.html
+++ b/src/modules/email-headings/templates/template.dark.onyx.html
@@ -2,36 +2,22 @@
 	Module: Email Heading
 	Variant: @@variant, onyx buttons, dark background
 -->
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark @@variant">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark cta-banner @@variant">
 	<tr>
 		<td class="frame"></td>
-		<td class="content alt">
-			<table style="" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%" >
+		<td class="content h-flush">
+			<table style="" border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 				<tr>
-					<td>
-						<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">@@eyebrowLabel</span></p>
-						<br>
+					<td class="column">
 						@@heading
 						<br>
 						@@paragraph
 					</td>
-					<td>
-						<!--
-							Component: Pill Button
-							Variant: Primary, MSO Dark, Onyx
-						-->
-						<!--[if mso]>
-							<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-								style="height:32px;v-text-anchor:middle;color:#171A1C;width:@@btnWidth;" 
-								fillcolor="#ffffff">
-								<w:anchorlock/>
-								<center>
-						<![endif]-->
-						<a target="_blank" href="https://lazard.com/" style="width: @@btnWidth"  class="btn pill onyx">@@btnLabel</a>
-						<!--[if mso]>
-								</center>
-							</v:roundrect>
-						<![endif]-->
+					<td class="column">
+						@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
+							label: "Download",
+							width: "98px"
+						})
 					</td>
 				</tr>
 			</table>			
