--- a/src/templates/factor-report.html
+++ b/src/templates/factor-report.html
@@ -270,7 +270,7 @@
 							<td class="content h-flush">
 								<table style="width: 100%;" cellpadding="8px">
 									<tr class="layout_mobile-one-column">
-										<td style class="column nowrap">
+										<td style="width: 65px;" class="column nowrap">
 											<a href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
 												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
 											</a>
