--- a/src/modules/cta-banner/one-column/templates/template.dark.onyx.html
+++ b/src/modules/cta-banner/one-column/templates/template.dark.onyx.html
@@ -1,3 +1,7 @@
+<!--
+	Module: CTA Banner, One Column
+	Variant: @@variant, onyx buttons, dark background
+-->
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark cta-banner @@variant">
 	<tr>
 		<td class="frame"></td>
@@ -6,7 +10,7 @@
 			<br>
 			@@paragraph
 			<br>
-			@@include("components/buttons/pills/templates/template.primary.onyx.html", {
+			@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
 				label: "Download",
 				width: "98px"
 			})		
