--- a/src/modules/cta-banner/one-column/templates/template.onyx.html
+++ b/src/modules/cta-banner/one-column/templates/template.onyx.html
@@ -1,3 +1,7 @@
+<!--
+	Module: CTA Banner, One Column
+	Variant: @@variant, onyx buttons
+-->
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner @@variant">
 	<tr>
 		<td class="frame"></td>
