Added more example templates

--- a/src/modules/two-column-contents/full-content/templates/template.dark.html
+++ b/src/modules/two-column-contents/full-content/templates/template.dark.html
@@ -9,7 +9,7 @@
 			<table style="width: 100%;" cellpadding="8px">
 				<tr class="layout_two-column">
 					<td class="column">
-						<img src="@@imgBase/LAM_ContentImage_Field.png" height="140px" class="margin-b-16" alt="First Column Feature image">
+						<img src="@@imgBase/LAM_ContentImage_Field.png" width="100%" alt="First Column Feature image">
 						
 						<!--
 							Component: Eyebrow
@@ -71,7 +71,7 @@
 						})
 					</td>
 					<td class="column">
-						<img src="@@imgBase/LAM_ContentImage_Station.png" height="140" class="margin-b-16" alt="Second Column Feature image">
+						<img src="@@imgBase/LAM_ContentImage_Station.png" width="100%" alt="Second Column Feature image">
 
 						<!--
 							Component: Eyebrow
