--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -63,7 +63,7 @@
 										<td class="column" width="100%">
 											<h1 style="width: 263px;">Lazard Connect</h1>
 											<br>
-											<p style="max-width: 404px;" class="paragraph-2">New Ideas, New Perspectives.</p>
+											<h2 style="max-width: 404px;" class="subheadline">New Ideas, New Perspectives.</h2>
 										</td>
 										<td class="column">
 											<!--
@@ -682,7 +682,43 @@
 				</td>
 			</tr>
 
-			<!-- One Column Content -->
+			<!-- One Column Content (1) -->
+			<tr>
+				<td align="center">
+					<!--
+						Module: One Column Content, Shift Right
+						Variant: parchment, sapphire buttons
+					-->
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
+						<tr>
+							<td class="frame"></td>
+							<td class="content h-flush">
+								<table style="width: 100%;" cellpadding="8px">
+									<tr class="layout_mobile-one-column">
+										<td width="124" style="font-size:1px; line-height:21px;" class="column">&nbsp;</td>
+										<td class="column">
+											<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
+											<br>
+											<h2>One chart you need to see</h2>
+											<br>
+											<p class="paragraph-2">
+												<strong>Is Manufacturing Shifting from China to India?</strong>
+											</p>
+											<br>
+											<p class="paragraph-2">While increased tariffs are causing many companies to navigate away from China and toward India, we believe China will likely remain an important manufacturing destination for the foreseeable future. Operating in the country is indeed becoming more difficult for foreign investors—but it continues to have competitive infrastructure, an effective labor force, and long-standing relationships with foreign companies that would be challenging and costly to replace.</p>
+											<br>
+											<a href="https://lazard.com" class="btn text ">Text Button <span>&#8594;</span></a>
+										</td>
+									</tr>
+								</table>
+							</td>
+							<td class="frame"></td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+
+			<!-- One Column Content (2) -->
 			<tr>
 				<td align="center">
 					<!--
@@ -696,11 +732,11 @@
 								<!--
 									Component: Eyebrow
 								-->
-								<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
+								<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">Your Team</span></p>
 								<br>
-								<h3>Do Rising US Interest Rates Offer Opportunities in EM?</h3>
+								<h4>Investment Grade Corporate and Sovereign Yields Are Eye-Catching</h4>
 								<br>
-								<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
+								<p class="paragraph-2">Emerging Markets Investment Grade Yields</p>
 								<br>
 								<img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_1YGraph.png" alt="1Y Grades Chart" class="mw-100">
 								<p></p> <!-- Spacer <p> for MSO image margin -->
@@ -710,6 +746,198 @@
 									Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br>
 									Source: Lazard, JP Morgan
 								</p>
+							</td>
+							<td class="frame"></td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+
+			<!-- CTA Banner (1) -->
+			<tr>
+				<td align="center">
+					<!--
+						Module: CTA Banner, Two Column
+						Variant: sage, onyx buttons
+					-->
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner sage">
+						<tr>
+							<td class="frame"></td>
+							<td class="content h-flush">
+								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
+									<tr>
+										<td class="column">
+											<h3>Explore a New Perspective on AI from Our Team</h3>
+										</td>
+										<td class="column">
+											<!--
+												Component: Pill Button
+												Variant: Primary, Onyx
+											-->
+											<!--[if mso]>
+												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+													style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
+													fillcolor="#171A1C">
+													<w:anchorlock/>
+													<center>
+											<![endif]-->
+											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill onyx">Download</a>
+											<!--[if mso]>
+													</center>
+												</v:roundrect>
+											<![endif]-->
+										</td>
+									</tr>
+								</table>			
+							</td>
+							<td class="frame"></td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+
+			<!-- Three Column Content, Large Thumbnail -->
+			<tr>
+				<td align="center">
+					<!--
+						Module: Three Column Content, Large Thumbnail
+						Variant: sage
+					-->
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module sage">
+						<tr>
+							<td class="frame"></td>
+							<td class="content h-flush">
+								<table style="width: 100%;" cellpadding="8px">
+									<tr class="layout_four-column">
+										<td colspan="2">
+											<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_GIFL.png" alt="GIFL Image" width="100%">
+											<p></p> <!-- Spacer <p> for MSO image margin -->
+											<br>
+											<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
+											<br>
+											<a href="https://lazard.com" class="btn text ">Subscribe <span>&#8594;</span></a>
+										</td>
+										<!-- <td></td> -->
+										<td class="column">
+											<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_GIFL.png" alt="GIFL Image" width="124">
+											<p></p> <!-- Spacer <p> for MSO image margin -->
+											<br>
+											<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
+											<br>
+											<a href="https://lazard.com" class="btn text ">Subscribe <span>&#8594;</span></a>
+										</td>
+										<td class="column">
+											<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_GIFL.png" alt="GIFL Image" width="124">
+											<p></p> <!-- Spacer <p> for MSO image margin -->
+											<br>
+											<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
+											<br>
+											<a href="https://lazard.com" class="btn text ">Subscribe <span>&#8594;</span></a>
+										</td>
+									</tr>
+								</table>
+							</td>
+							<td class="frame"></td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+
+			<!-- CTA Banner (2) -->
+			<tr>
+				<td align="center">
+					<!--
+						Module: CTA Banner, Two Column
+						Variant: sapphire, sapphire buttons, dark background
+					-->
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark cta-banner sapphire">
+						<tr>
+							<td class="frame"></td>
+							<td class="content h-flush">
+								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
+									<tr>
+										<td class="column">
+											<h3>Explore a New Perspective on AI from Our Team</h3>
+											<br>
+											<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+										</td>
+										<td class="column">
+											<!--
+												Component: Pill Button
+												Variant: Primary, MSO Dark, Sapphire
+											-->
+											<!--[if mso]>
+												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+													style="height:32px;v-text-anchor:middle;color:#00539A;width:98px;" 
+													fillcolor="#ffffff">
+													<w:anchorlock/>
+													<center>
+											<![endif]-->
+											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">Download</a>
+											<!--[if mso]>
+													</center>
+												</v:roundrect>
+											<![endif]-->
+										</td>
+									</tr>
+								</table>			
+							</td>
+							<td class="frame"></td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+
+			<!-- Footer + Disclaimer -->
+			<tr>
+				<td align="center">
+					<!--
+						Module: Two Column Footer Disclaimer
+						Variant: Onyx
+					-->
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark onyx">
+						<tr>
+							<td class="frame"></td>
+							<td class="content h-flush">
+								<table style="width: 100%;" cellpadding="8px">
+									<tr class="layout_mobile-one-column">
+										<td style="width: 65px;" class="column nowrap">
+											<a href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
+												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
+											</a>
+											&nbsp;&nbsp;
+											<a href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
+												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
+											</a>
+										</td>
+										<td class="column">
+											<p class="paragraph-2">Lazard Asset Management, 30 Rockefeller Plaza, New York, NY 10112-6300</p>
+											<br>
+											<p class="paragraph-2">For more information on Lazard Asset Management's capabilities,</p>
+											<p class="paragraph-2 margin-b-48">visit <a href="lazardassetmanagement.com" class="paragraph-2">lazardassetmanagement.com</a>.</p>
+			
+											<p class="paragraph-3">1 The investment team's research covers the time period from January 1,1998 to December 31, 2022.</p>
+											<p class="paragraph-3">2 As measured by cash flow return on investment or return on equity.</p>
+											<br>
+											<p class="paragraph-2">FOR FINANCIAL PROFESSIONAL USE ONLY. NOT FOR PUBLIC DISTRIBUTION.</p>
+											<br>
+											<table style="width: 100%;">
+												<tr class="layout_two-column">
+													<td style class="column padding-r-16">
+														<p class="paragraph-3">Information and opinions presented have been obtained or derived from sources believed by Lazard to be reliable. Lazard makes no representation as to their accuracy or completeness. All opinions expressed herein are subject to change. The S&P 500 Index is a market capitalization-weighted index of 500 companies in leading industries of the US economy. The MSCI Emerging Markets Index is a free-float-adjusted market capitalization index that is designed to measure equity market performance in the global emerging markets. The MSCI Emerging Markets Index consists of emerging markets country indices including: Brazil, Chile, China, Colombia, Czech Republic, Egypt, Greece, Hungary, India, Indonesia, Korea, Malaysia, Mexico, Peru, Philippines, Poland, Qatar, Saudi Arabia, South Africa, Taiwan, Thailand, Turkey, and United Arab Emirates. The index is unmanaged and has no fees. One cannot invest directly in an index. The MSCI World Index is a free-float-adjusted market capitalization index that is designed to measure global developed market equity performance comprised of developed market country indices. </p>
+													</td>
+													<td class="column">
+														<p class="paragraph-3">The index is unmanaged and has no fees. One cannot invest directly in an index.Certain information included herein is derived by Lazard in part from an MSCI index or indices (the “Index Data”). However, MSCI has not reviewed this product or report, and does not endorse or express any opinion regarding this product or report or any analysis or other information contained herein or the author or source of any such information or analysis. MSCI makes no express or implied warranties or representations and shall have no liability whatsoever with respect to any Index Data or data derived therefrom.</p>
+														<br>
+														<p class="paragraph-3">Read our Privacy Notice for information about how we use personal data that we hold on you</p>
+														<br>
+														<p class="paragraph-3">To unsubscribe from future emails or customize our communications with you, manage your email preferences.</p>
+													</td>
+												</tr>
+											</table>
+										</td>
+									</tr>
+								</table>
 							</td>
 							<td class="frame"></td>
 						</tr>
