--- a/src/modules/tables/numbered/templates/template.html
+++ b/src/modules/tables/numbered/templates/template.html
@@ -69,7 +69,7 @@
 				</tr>
 			</table>
 			<br>
-			<p><a style href="https://www.lazard.com" class="btn text">See all highlights &nbsp; <span class="arrow">&#8594;</span></a></p>
+			<p><a style target="_blank" href="https://www.lazard.com" class="btn text">See all highlights &nbsp; <span class="arrow">&#8594;</span></a></p>
 			<br>
 			<p>Lazard Equity Advantage Team</p>
 			<a class="paragraph" href="mailto:EquityAdvantage@lazard.com">EquityAdvantage@lazard.com</a>
