--- a/src/modules/two-column-contents/image-right/templates/template.dark.onyx.html
+++ b/src/modules/two-column-contents/image-right/templates/template.dark.onyx.html
@@ -16,7 +16,7 @@
 						<p class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
 						<br>
 						
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
 						<br>
 						
 						@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
