--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -707,7 +707,7 @@
 											<br>
 											<p class="paragraph-2">While increased tariffs are causing many companies to navigate away from China and toward India, we believe China will likely remain an important manufacturing destination for the foreseeable future. Operating in the country is indeed becoming more difficult for foreign investors—but it continues to have competitive infrastructure, an effective labor force, and long-standing relationships with foreign companies that would be challenging and costly to replace.</p>
 											<br>
-											<a href="https://lazard.com" class="btn text ">Text Button <span>&#8594;</span></a>
+											<a target="_blank" href="https://lazard.com" class="btn text ">Text Button <span>&#8594;</span></a>
 										</td>
 									</tr>
 								</table>
@@ -815,7 +815,7 @@
 											<br>
 											<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 											<br>
-											<a href="https://lazard.com" class="btn text ">Subscribe <span>&#8594;</span></a>
+											<a target="_blank" href="https://lazard.com" class="btn text ">Subscribe <span>&#8594;</span></a>
 										</td>
 										<!-- <td></td> -->
 										<td class="column">
@@ -824,7 +824,7 @@
 											<br>
 											<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 											<br>
-											<a href="https://lazard.com" class="btn text ">Subscribe <span>&#8594;</span></a>
+											<a target="_blank" href="https://lazard.com" class="btn text ">Subscribe <span>&#8594;</span></a>
 										</td>
 										<td class="column">
 											<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_GIFL.png" alt="GIFL Image" width="124">
@@ -832,7 +832,7 @@
 											<br>
 											<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 											<br>
-											<a href="https://lazard.com" class="btn text ">Subscribe <span>&#8594;</span></a>
+											<a target="_blank" href="https://lazard.com" class="btn text ">Subscribe <span>&#8594;</span></a>
 										</td>
 									</tr>
 								</table>
@@ -902,11 +902,11 @@
 								<table style="width: 100%;" cellpadding="8px">
 									<tr class="layout_mobile-one-column">
 										<td style="width: 65px;" class="column nowrap">
-											<a href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
+											<a target="_blank" href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
 												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
 											</a>
 											&nbsp;&nbsp;
-											<a href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
+											<a target="_blank" href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
 												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
 											</a>
 										</td>
@@ -914,7 +914,7 @@
 											<p class="paragraph-2">Lazard Asset Management, 30 Rockefeller Plaza, New York, NY 10112-6300</p>
 											<br>
 											<p class="paragraph-2">For more information on Lazard Asset Management's capabilities,</p>
-											<p class="paragraph-2 margin-b-48">visit <a href="lazardassetmanagement.com" class="paragraph-2">lazardassetmanagement.com</a>.</p>
+											<p class="paragraph-2 margin-b-48">visit <a target="_blank" href="lazardassetmanagement.com" class="paragraph-2">lazardassetmanagement.com</a>.</p>
 			
 											<p class="paragraph-3">1 The investment team's research covers the time period from January 1,1998 to December 31, 2022.</p>
 											<p class="paragraph-3">2 As measured by cash flow return on investment or return on equity.</p>
