--- a/src/modules/footer-disclaimer/two-column/templates/template.html
+++ b/src/modules/footer-disclaimer/two-column/templates/template.html
@@ -9,11 +9,11 @@
 			<table style="width: 100%;" cellpadding="8px">
 				<tr class="layout_mobile-one-column">
 					<td style="width: 65px;" class="column nowrap">
-						<a href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
+						<a target="_blank" href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
 							<img src="@@imgBase/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
 						</a>
 						&nbsp;&nbsp;
-						<a href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
+						<a target="_blank" href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
 							<img src="@@imgBase/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
 						</a>
 					</td>
