--- a/src/modules/one-column-contents/basic/templates/template.dark.html
+++ b/src/modules/one-column-contents/basic/templates/template.dark.html
@@ -27,10 +27,10 @@
 			<p class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
 			<br>
 			
-			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Emerging Markets</a></p>
-			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Europe</a></p>
-			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Japan</a></p>
-			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on the United Kingdom</a></p>
+			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on Emerging Markets</a></p>
+			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on Europe</a></p>
+			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on Japan</a></p>
+			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on the United Kingdom</a></p>
 			<br>
 
 			<!--
