--- a/src/templates/em-monitor.html
+++ b/src/templates/em-monitor.html
@@ -153,11 +153,11 @@
 								<table style="width: 100%;" cellpadding="8px">
 									<tr class="layout_mobile-one-column">
 										<td style="width: 65px;" class="column nowrap">
-											<a href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
+											<a target="_blank" href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
 												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
 											</a>
 											&nbsp;&nbsp;
-											<a href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
+											<a target="_blank" href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
 												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
 											</a>
 										</td>
