--- a/src/templates/factor-report.html
+++ b/src/templates/factor-report.html
@@ -126,7 +126,7 @@
 									</tr>				
 								</table>
 								<br>
-								<p><a style href="https://www.lazard.com" class="btn text">See all highlights &nbsp; <span class="arrow">&#8594;</span></a></p>
+								<p><a target="_blank" style href="https://www.lazard.com" class="btn text">See all highlights &nbsp; <span class="arrow">&#8594;</span></a></p>
 								<br>
 								<p>Lazard Equity Advantage Team</p>
 								<a class="paragraph" href="mailto:EquityAdvantage@lazard.com">EquityAdvantage@lazard.com</a>
@@ -201,7 +201,7 @@
 											<br>
 											<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 											<br>
-											<a href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
+											<a target="_blank" href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
 										</td>
 									</tr>
 								</table>
@@ -271,11 +271,11 @@
 								<table style="width: 100%;" cellpadding="8px">
 									<tr class="layout_mobile-one-column">
 										<td style="width: 65px;" class="column nowrap">
-											<a href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
+											<a target="_blank" href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
 												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
 											</a>
 											&nbsp;&nbsp;
-											<a href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
+											<a target="_blank" href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
 												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
 											</a>
 										</td>
